fix overlay on mobile version

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -148,7 +148,7 @@
         }
     }
 
-    .passion-img-container:focus .overlay {
+    .passion-img-container:active .overlay {
         opacity: 1;
     }
 }
